fixed mobile navigation padding causing overflow

--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -77,6 +77,7 @@ nav {
       transition: all .3s cubic-bezier(0.42, 0, 0.12, 0.98);
       background-color: inherit;
       width: 100%;
+      padding: 0;
       border-bottom: $border;
       visibility: hidden;
     }
